--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tresjs/core": "^5.1.0",
+    "@types/three": "^0.180.0",
     "kute.js": "^2.2.4",
+    "three": "^0.180.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.2"
   },
